# lilypalooza

./: .gitattributes  .gitignore  .ignore  Cargo.toml  Makefile  README.md  rustfmt.toml  rustfmt.vendor.toml
.codex/environments/: environment.toml
.github/workflows/: ci.yml
assets/soundfonts/: lilypalooza-test.sf2
crates/auxiliary-window/: Cargo.toml
crates/auxiliary-window/src/: lib.rs  macos.rs
crates/editor-host/: Cargo.toml
crates/editor-host/src/: host.rs  lib.rs  macos.rs
crates/editor-host/src/host/: macos.rs  window_ops.rs
crates/editor-host/src/host/macos/: tests.rs  window_tests.rs
crates/iced-code-editor/: Cargo.toml  README.md
crates/iced-code-editor/locales/: de.yml  es.yml  fr.yml  it.yml
crates/iced-code-editor/src/: i18n.rs  language.rs  lib.rs  theme.rs
crates/iced-code-editor/src/canvas_editor/: canvas_impl.rs  command.rs  completion.rs  cursor.rs  goto_line_dialog.rs  highlighting.rs  ime_requester.rs  mod.rs  search.rs  search_dialog.rs  selection.rs  update.rs  view.rs
crates/iced-code-editor/src/canvas_editor/lsp_process/: overlay.rs
crates/lilypalooza-audio/: Cargo.toml
crates/lilypalooza-audio/benches/: engine_block_costs.rs  strip_balance_meter.rs
crates/lilypalooza-audio/examples/: play_soundfont_midi.rs  profile_engine.rs
crates/lilypalooza-audio/src/: engine.rs  instrument.rs  lib.rs  mixer.rs  sequencer.rs  soundfont.rs  test_support.rs  test_utils.rs  track.rs  transport.rs
crates/lilypalooza-audio/src/engine/: engine_tests.rs  tests.rs
crates/lilypalooza-audio/src/instrument/: definitions.rs  gain_effect.rs  instrument_tests.rs  metronome_synth.rs  registry.rs  runtime_nodes.rs  soundfont_synth.rs  tests.rs
crates/lilypalooza-audio/src/mixer/: runtime.rs  runtime_handle.rs  state.rs  state_helpers.rs  track.rs
crates/lilypalooza-audio/src/mixer/runtime/: bus_runtime.rs  graph_helpers.rs  master_runtime.rs  meter.rs  mix_helpers.rs  mixer_runtime.rs  pdc.rs  runtime_tests.rs  strip_nodes.rs  tests.rs  track_runtime.rs  track_signal_path.rs
crates/lilypalooza-audio/src/mixer/state/: state_tests.rs
crates/lilypalooza-audio/src/sequencer/: midi_events.rs  scheduler.rs  sequencer_tests.rs  tests.rs
crates/lilypalooza-builtins/: Cargo.toml
crates/lilypalooza-builtins/assets/fonts/: README.md
crates/lilypalooza-builtins/examples/: open_soundfont_synth.rs  play_soundfont_midi.rs  profile_engine.rs
crates/lilypalooza-builtins/src/: gain_effect.rs  lib.rs  metronome_synth.rs  soundfont_synth.rs
crates/lilypalooza-builtins/src/soundfont_synth/: model_and_runtime.rs  processor_and_editor.rs  retro_ui.rs  soundfont_tests.rs  tests.rs
crates/lilypalooza-builtins/src/soundfont_synth/soundfont_tests/: editor_ui.rs  processor.rs
crates/lilypalooza-clap/: Cargo.toml
crates/lilypalooza-clap/src/: lib.rs  probe.rs  processor_editor.rs  runtime.rs  tests.rs
crates/lilypalooza-egui-baseview/: Cargo.toml
crates/lilypalooza-egui-baseview/src/: input.rs  lib.rs  window.rs
crates/lilypalooza-plugin-scan/: Cargo.toml
crates/lilypalooza-plugin-validator/: Cargo.toml
crates/lilypalooza-vst3/: Cargo.toml
scripts/lilypond-error-tests/: 01-binary-not-found.sh  02-version-too-old.sh  03-version-command-fails.sh  README.md
src/: app.rs  browser_file_watcher.rs  control_icon.rs  editor_file_watcher.rs  error_prompt.rs  fonts.rs  icons.rs  lilypond.rs  logger.rs  main.rs  midi.rs  number.rs  playback.rs  score_watcher.rs  settings.rs  shortcuts.rs  state.rs  status_bar.rs  track_colors.rs  track_names.rs  ui_style.rs
src/app/: application.rs  application_tests.rs  controls.rs  dock_view.rs  editor.rs  editor_frame.rs  knob.rs  messages.rs  meters.rs  mixer.rs  piano_roll.rs  processor_editor_windows.rs  processor_presets.rs  score_cursor.rs  score_view.rs  transport_bar.rs  update.rs  view.rs  workspace_runtime.rs
src/app/editor/: model.rs  (+5 more)
src/midi/: midi_tests.rs  tests.rs
src/settings/: formatting.rs  model.rs
src/shortcuts/: actions.rs  bindings.rs  keymap.rs
src/ui_style/: buttons.rs  foundations.rs  icons.rs
tests/snapshots/: editor_menu_item-tiny-skia.sha256  editor_menu_item-wgpu.sha256  editor_pane_header-wgpu.sha256  instrument_browser_tabs-wgpu.sha256  instrument_track_area_open_panel-tiny-skia.sha256  instrument_track_area_open_panel-wgpu.sha256  master_track_area_open_panel-tiny-skia.sha256  master_track_area_open_panel-wgpu.sha256  mixer_bus_area_empty_centered_add_bus-wgpu.sha256  mixer_bus_area_empty_centered_add_icon-wgpu.sha256  mixer_bus_area_empty_centered_add_icon_no_section_gap-tiny-skia.sha256  mixer_bus_area_empty_centered_add_icon_no_section_gap-wgpu.sha256  mixer_bus_area_empty_centered_add_icon_tinted-wgpu.sha256  mixer_bus_area_nonempty_add_icon_lane-wgpu.sha256  mixer_bus_area_nonempty_add_icon_lane_flat_close-tiny-skia.sha256  mixer_bus_area_nonempty_add_icon_lane_flat_close-wgpu.sha256  mixer_bus_area_nonempty_add_icon_lane_no_section_gap-wgpu.sha256  mixer_bus_area_nonempty_add_icon_lane_tinted-wgpu.sha256  mixer_bus_area_nonempty_add_lane-wgpu.sha256  mixer_full_track_strip_rename-wgpu.sha256  mixer_full_track_strip_rename_five_grid-wgpu.sha256  mixer_full_track_strip_rename_no_section_gap-tiny-skia.sha256  mixer_full_track_strip_rename_no_section_gap-wgpu.sha256  mixer_full_track_strip_rename_reserved_title-wgpu.sha256  mixer_full_track_strip_rename_section_gap-wgpu.sha256  mixer_full_track_strip_rename_six_grid-wgpu.sha256  mixer_full_track_strip_rename_square_swatch-wgpu.sha256  mixer_full_track_strip_rename_tall_viewport-wgpu.sha256  mixer_full_track_strip_rename_title_gap-wgpu.sha256  mixer_full_track_strip_rename_title_gap_layout-wgpu.sha256  mixer_master_strip_main_title_centered-wgpu.sha256  mixer_master_strip_main_title_no_section_gap-tiny-skia.sha256  mixer_master_strip_main_title_no_section_gap-wgpu.sha256  mixer_strip_controls_title_gap-wgpu.sha256  mixer_strip_controls_title_gap_fixed-tiny-skia.sha256  mixer_strip_controls_title_gap_fixed-wgpu.sha256  mixer_strip_title_editor_integration-wgpu.sha256  mixer_strip_title_editor_integration_big-wgpu.sha256  (+19 more)
(+83 files in other folders)
