[package]
name = "lilypalooza"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "crates/editor-host",
    "crates/iced-code-editor",
    "crates/lilypalooza-audio",
    "crates/lilypalooza-builtins",
    "crates/lilypalooza-egui-baseview",
]

[workspace.dependencies]
iced = "0.14"
iced_core = "0.14.0"

[dependencies]
editor-host = { path = "crates/editor-host" }
bytemuck = { version = "1.23.1", features = ["derive"] }
directories = "5.0.1"
iced = { workspace = true, features = ["canvas", "image", "lazy", "tokio", "svg"] }
iced_aw = { path = "vendor/iced_aw", default-features = false, features = ["color_picker", "drop_down"] }
iced_core = { workspace = true }
iced-code-editor = { path = "crates/iced-code-editor" }
lilypalooza-audio = { path = "crates/lilypalooza-audio" }
lilypalooza-builtins = { path = "crates/lilypalooza-builtins" }
notify = "8.2.0"
resvg = "0.45.1"
ron = "0.8.1"
rfd = "0.15"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.25.0"
thiserror = "2.0.18"
toml = "0.8"

[dev-dependencies]
iced_test = "0.14.0"
midly = "0.5.3"

[lints]
workspace = true

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"
bare_urls = "warn"

[workspace.lints.clippy]
dbg_macro = "warn"
todo = "warn"
unwrap_used = "warn"
undocumented_unsafe_blocks = "deny"
