[package]
name = "lilypalooza"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "crates/editor-host",
    "crates/lilypalooza-audio",
    "crates/lilypalooza-builtins",
    "crates/lilypalooza-clap",
    "crates/lilypalooza-egui-baseview",
    "crates/lilypalooza-plugin-scan",
    "crates/lilypalooza-plugin-validator",
    "crates/lilypalooza-vst3",
]
exclude = [
    "crates/vendor/iced-code-editor",
    "crates/vendor/iced_aw",
    "crates/vendor/tree-sitter-lilypond",
]

[workspace.dependencies]
iced = "0.14"
iced_core = "0.14.0"

[dependencies]
editor-host = { path = "crates/editor-host" }
bytemuck = { version = "1.23.1", features = ["derive"] }
directories = "5.0.1"
iced = { workspace = true, features = ["canvas", "image", "lazy", "tokio", "svg"] }
iced_aw = { path = "crates/vendor/iced_aw", default-features = false, features = ["color_picker", "drop_down"] }
iced_core = { workspace = true }
iced-code-editor = { path = "crates/vendor/iced-code-editor" }
lilypalooza-audio = { path = "crates/lilypalooza-audio" }
lilypalooza-builtins = { path = "crates/lilypalooza-builtins" }
lilypalooza-clap = { path = "crates/lilypalooza-clap" }
lilypalooza-plugin-scan = { path = "crates/lilypalooza-plugin-scan" }
lilypalooza-vst3 = { path = "crates/lilypalooza-vst3" }
env_logger = "0.11.9"
log = "0.4.28"
notify = "8.2.0"
resvg = "0.45.1"
ron = "0.8.1"
rfd = "0.15"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.25.0"
thiserror = "2.0.18"
toml = "0.8"

[dev-dependencies]
iced_test = "0.14.0"
midly = "0.5.3"

[lints]
workspace = true

[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
missing_docs = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"
bare_urls = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

# Don't panic.
string_slice = "warn"
indexing_slicing = "warn"
dbg_macro = "warn"
unwrap_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"
unreachable = "warn"
get_unwrap = "warn"
unwrap_in_result = "warn"
unchecked_time_subtraction = "warn"
panic_in_result_fn = "warn"

# Don't fail silently.
let_underscore_future = "warn"
let_underscore_must_use = "warn"
unused_result_ok = "warn"
map_err_ignore = "warn"
assertions_on_result_states = "warn"

# Don't do bad async stuff.
await_holding_lock = "warn"
await_holding_refcell_ref = "warn"
if_let_mutex = "warn"
large_futures = "warn"

# Don't do unsafe things with memory.
mem_forget = "warn"
undocumented_unsafe_blocks = "deny"
multiple_unsafe_ops_per_block = "warn"
unnecessary_safety_doc = "warn"
unnecessary_safety_comment = "warn"

# Don't do potentially incorrect things with numbers.
float_cmp = "warn"
float_cmp_const = "warn"
lossy_float_literal = "warn"
cast_sign_loss = "warn"
invalid_upcast_comparisons = "warn"

# Don't do bad things that are easy to avoid.
rc_mutex = "warn"
debug_assert_with_mut_call = "warn"
iter_not_returning_iterator = "warn"
expl_impl_clone_on_copy = "warn"
infallible_try_from = "warn"

# Require intentional lint suppressions.
allow_attributes = "warn"
allow_attributes_without_reason = "warn"
