[package]
name = "auxiliary-window"
version = "0.1.0"
edition = "2024"

[dependencies]
raw-window-handle = "0.6"
thiserror = "2.0.18"

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6.1"
objc2 = "0.6.3"
objc2-app-kit = { version = "0.3.2", features = [
    "NSApplication",
    "NSButton",
    "NSColor",
    "NSEvent",
    "NSMenu",
    "NSControl",
    "NSTextField",
    "NSView",
    "NSWindow",
] }
objc2-foundation = "0.3.2"
objc2-quartz-core = { version = "0.3.2", features = ["CALayer"] }

[lints.rust]
unsafe_code = "allow"
missing_docs = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

[lints.rustdoc]
broken_intra_doc_links = "deny"
bare_urls = "warn"

[lints.clippy]
dbg_macro = "warn"
todo = "warn"
unwrap_used = "warn"
undocumented_unsafe_blocks = "deny"
