[package]
name = "editor-host"
version = "0.1.0"
edition = "2024"

[dependencies]
lilypalooza-egui-baseview = { path = "../lilypalooza-egui-baseview" }
log = "0.4.28"
raw-window-handle = "0.6"
thiserror = "2.0.18"

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6.2"
objc2 = "0.6.3"
objc2-app-kit = { version = "0.3.2", features = [
    "NSApplication",
    "NSButton",
    "NSColor",
    "NSControl",
    "NSEvent",
    "NSGraphics",
    "NSMenu",
    "NSMenuItem",
    "NSTextField",
    "NSView",
    "NSWindow",
] }
objc2-foundation = { version = "0.3.2", features = [
    "NSDate",
    "NSNotification",
    "NSObject",
    "NSObjCRuntime",
    "NSOperation",
    "NSRunLoop",
    "NSString",
    "block2",
] }
objc2-quartz-core = { version = "0.3.2", features = ["CALayer", "CATransaction"] }

[lints.rust]
unsafe_code = "allow"
missing_docs = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

[lints.rustdoc]
broken_intra_doc_links = "deny"
bare_urls = "warn"

[lints.clippy]
dbg_macro = "warn"
todo = "warn"
unwrap_used = "warn"
undocumented_unsafe_blocks = "deny"
