[package]
name = "lilypalooza-audio"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
arc-swap = "1.7.1"
audio_thread_priority = "0.34.0"
bincode = "1.3.3"
crossbeam-channel = "0.5.15"
knyst = { git = "https://github.com/ales-tsurko/knyst", rev = "55f469c33cee9bb068a392683ccc621660a4c685", default-features = false, features = ["cpal"] }
midly = "0.5.3"
rustysynth = "1.3.6"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.18"
wide = "1.3.0"

[dev-dependencies]
ron = "0.8.1"
