[package]
name = "lilypalooza-audio"
version = "0.1.0"
edition = "2024"

[features]
test-support = []

[lints]
workspace = true

[dependencies]
arc-swap = "1.7.1"
crossbeam-channel = "0.5.15"
knyst = { git = "https://github.com/ales-tsurko/knyst", rev = "be8df5331539c922ab362b57621563186e789c89", default-features = false, features = ["cpal"] }
midly = "0.5.3"
num-traits = "0.2.19"
raw-window-handle = "0.6"
rustysynth = "1.3.6"
serde = { version = "1.0", features = ["derive"] }
wide = "1.3.0"
thiserror = "2.0.18"

[dev-dependencies]
knyst = { git = "https://github.com/ales-tsurko/knyst", rev = "be8df5331539c922ab362b57621563186e789c89", default-features = false, features = ["cpal"] }
midly = "0.5.3"
ron = "0.8.1"

[[bench]]
name = "engine_block_costs"
harness = false

[[bench]]
name = "strip_balance_meter"
harness = false
