[package]
name = "lilypalooza-builtins"
version = "0.1.0"
edition = "2024"

[dependencies]
arc-swap = "1.7.1"
bincode = "1.3.3"
knyst = { git = "https://github.com/ales-tsurko/knyst", rev = "be8df5331539c922ab362b57621563186e789c89", default-features = false, features = ["cpal"] }
lilypalooza-audio = { path = "../lilypalooza-audio" }
lilypalooza-egui-baseview = { path = "../lilypalooza-egui-baseview" }
rustysynth = "1.3.6"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.18"

[dev-dependencies]
editor-host = { path = "../editor-host" }
iced = { workspace = true, features = ["tokio"] }
midly = "0.5.3"
ron = "0.8.1"

[lints]
workspace = true
