[package]
name = "lilypalooza-egui-baseview"
version = "0.1.0"
edition = "2024"

[dependencies]
baseview = { git = "https://github.com/vizia/baseview", rev = "77fec022db136fb771d5775ae13d088f4f166c04", features = ["opengl"] }
egui = "0.33.3"
egui_glow = "0.33.3"
glow = "0.16.0"
keyboard-types = "0.7.0"
raw-window-handle = { version = "0.5.2", package = "raw-window-handle" }
raw-window-handle-06 = { version = "0.6", package = "raw-window-handle" }
thiserror = "2.0.18"

[lints.rust]
unsafe_code = "allow"
missing_docs = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

[lints.rustdoc]
broken_intra_doc_links = "deny"
bare_urls = "warn"

[lints.clippy]
dbg_macro = "warn"
todo = "warn"
unwrap_used = "warn"
undocumented_unsafe_blocks = "deny"
