[package]
name = "lilypalooza-egui-baseview"
version = "0.1.0"
edition = "2024"

[dependencies]
baseview = { version = "0.1.0", features = ["opengl"] }
egui = "0.34.2"
egui_glow = "0.34.2"
glow = "0.17.0"
keyboard-types = "0.6.2"
log = "0.4.28"
raw-window-handle = { version = "0.5.2", package = "raw-window-handle" }
raw-window-handle-06 = { version = "0.6", package = "raw-window-handle" }
thiserror = "2.0.18"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.3"
objc2-app-kit = { version = "0.3.2", features = ["NSView"] }
objc2-foundation = "0.3.2"
objc2-quartz-core = { version = "0.3.2", features = ["CATransaction"] }

[lints.rust]
unsafe_code = "allow"
missing_docs = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

[lints.rustdoc]
broken_intra_doc_links = "deny"
bare_urls = "warn"

[lints.clippy]
dbg_macro = "warn"
todo = "warn"
unwrap_used = "warn"
undocumented_unsafe_blocks = "deny"
