[package]
name = "lilypalooza-egui-baseview"
version = "0.1.0"
edition = "2024"

[dependencies]
baseview = { version = "0.1.1", features = ["opengl"] }
egui = "0.34.2"
egui_glow = "0.34.2"
glow = "0.17.0"
keyboard-types = "0.6.2"
log = "0.4.28"
raw-window-handle = { version = "0.5.2", package = "raw-window-handle" }
raw-window-handle-06 = { version = "0.6", package = "raw-window-handle" }
thiserror = "2.0.18"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.3"
objc2-app-kit = { version = "0.3.2", features = ["NSView"] }
objc2-foundation = "0.3.2"
objc2-quartz-core = { version = "0.3.2", features = ["CATransaction"] }

[lints.rust]
unsafe_code = "allow"
missing_debug_implementations = "warn"
missing_docs = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

[lints.rustdoc]
broken_intra_doc_links = "deny"
bare_urls = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
string_slice = "warn"
indexing_slicing = "warn"
unwrap_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"
unreachable = "warn"
get_unwrap = "warn"
unwrap_in_result = "warn"
unchecked_time_subtraction = "warn"
panic_in_result_fn = "warn"
let_underscore_future = "warn"
let_underscore_must_use = "warn"
unused_result_ok = "warn"
map_err_ignore = "warn"
assertions_on_result_states = "warn"
await_holding_lock = "warn"
await_holding_refcell_ref = "warn"
if_let_mutex = "warn"
large_futures = "warn"
mem_forget = "warn"
undocumented_unsafe_blocks = "deny"
multiple_unsafe_ops_per_block = "warn"
unnecessary_safety_doc = "warn"
unnecessary_safety_comment = "warn"
float_cmp = "warn"
float_cmp_const = "warn"
lossy_float_literal = "warn"
cast_sign_loss = "warn"
invalid_upcast_comparisons = "warn"
rc_mutex = "warn"
debug_assert_with_mut_call = "warn"
iter_not_returning_iterator = "warn"
expl_impl_clone_on_copy = "warn"
infallible_try_from = "warn"
dbg_macro = "warn"
allow_attributes = "warn"
allow_attributes_without_reason = "warn"
